# fractal-cpp

./: .gitignore  CMakeLists.txt
include/: application.hpp  config.hpp  files.hpp  fractal.hpp
src/: main.cpp
